[package]
name = "decorum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
derive_more = { version = "0.99.17", features = ["display"], default-features = false }
dotenv = "0.15.0"
eyre = "0.6.8"
log = "0.4.20"
salvo = { version = "0.55.4", features = ["oapi", "affix", "session", "eyre"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4"] }
